# chrome-otp-autofill

./: README.md  pyproject.toml
chrome_otp_autofill/: code_extractor.py  main.py  message_watcher.py
chrome_otp_autofill/chrome_extension/: background.js  content.js  extension.py  manifest.json  server.py
tests/: test_code_extractor.py  test_message_watcher.py
