[tool.poetry]
name = "chrome-otp-autofill"
version = "0.1.0"
description = ""
authors = ["zwuzest <zwu@zestfinance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^5.0.3"
flask = "^3.0.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
